[package]
name = "spring-postgres"
description = "Integrate tokio-postgres with spring-rs"
version = "0.2.1"
categories = ["database"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["tokio-postgres/default"]
array-impls = ["tokio-postgres/array-impls"]
js = ["tokio-postgres/js"]
with-bit-vec-0_6 = ["tokio-postgres/with-bit-vec-0_6"]
with-chrono-0_4 = ["tokio-postgres/with-chrono-0_4"]
with-eui48-0_4 = ["tokio-postgres/with-eui48-0_4"]
with-eui48-1 = ["tokio-postgres/with-eui48-1"]
with-geo-types-0_6 = ["tokio-postgres/with-geo-types-0_6"]
with-geo-types-0_7 = ["tokio-postgres/with-geo-types-0_7"]
with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]
with-smol_str-01 = ["tokio-postgres/with-smol_str-01"]
with-time-0_2 = ["tokio-postgres/with-time-0_2"]
with-time-0_3 = ["tokio-postgres/with-time-0_3"]
with-uuid-0_8 = ["tokio-postgres/with-uuid-0_8"]
with-uuid-1 = ["tokio-postgres/with-uuid-1"]

[dependencies]
spring = { path = "../spring", version = "0.2" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tokio = { workspace = true }
tokio-postgres = { workspace = true, optional = true }
schemars = { workspace = true }

[dev-dependencies]
spring-web = { path = "../spring-web" }
