[package]
name = "spring-redis"
description = "rust microservice framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
spring = { path = "../spring", version = "0.1.1" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
redis = { workspace = true, features = ["connection-manager", "tokio-comp"] }
schemars = { workspace = true }

[dev-dependencies]
spring-web = { path = "../spring-web", version = "0.1.1" }
