[package]
name = "spring-redis"
description = "Integrate redis-rs with spring-rs"
version = "0.4.3"
keywords = ["redis", "database", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
spring = { path = "../spring", version = "0.4" }
spring-macros = { path = "../spring-macros", version = "0.4" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
redis = { workspace = true, features = ["connection-manager", "tokio-comp"] }
schemars = { workspace = true }

[dev-dependencies]
spring-web = { path = "../spring-web" }
