[package]
name = "spring-sa-token"
description = "Sa-Token authentication and authorization plugin for spring-rs"
version = "0.1.1"
categories = ["authentication", "web-programming"]
keywords = ["authentication", "authorization", "sa-token", "spring", "security"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
spring = { path = "../spring", version = "0.4" }
spring-web = { path = "../spring-web", version = "0.4", optional = true }
spring-macros = { path = "../spring-macros", version = "0.4", features = ["sa-token"] }
spring-redis = { path = "../spring-redis", version = "0.4", optional = true }
sa-token-plugin-axum = { workspace = true }
sa-token-core = { workspace = true }
sa-token-adapter = { workspace = true }
sa-token-storage-memory = { workspace = true, optional = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[features]
default = ["memory", "with-web"]
memory = ["sa-token-storage-memory"]
with-web = ["spring-web"]
with-spring-redis = ["spring-redis"]
openapi = ["spring-web/openapi"]

[dev-dependencies]
tower = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
