[package]
name = "spring-sea-orm"
description = "rust microservice framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["sea-orm/runtime-tokio-native-tls"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]

[dependencies]
spring-boot = { path = "../spring-boot", version = "0.0.9" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }
sea-orm = { workspace = true, optional = true }

[dev-dependencies]
spring-web = { path = "../spring-web", version = "0.0.9" }
