[package]
name = "spring-sea-orm"
description = "spring-rs integrated with sea-orm"
version = "0.2.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["sea-orm/runtime-tokio-native-tls"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
with-web = ["spring-web"]

[dependencies]
spring-web = { path = "../spring-web", version = "0.2", optional = true }
spring = { path = "../spring", version = "0.2.2" }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }
sea-orm = { workspace = true, optional = true }
