[package]
name = "spring-sea-orm"
description = "Integration of spring-rs framework and sea-orm"
version = "0.4.7"
categories = ["database"]
keywords = ["orm", "sql-database", "spring"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["sea-orm/runtime-tokio-native-tls"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
with-web = ["spring-web"]
with-web-openapi = ["spring-web/openapi"]

[dependencies]
spring-web = { path = "../spring-web", version = "0.4", optional = true }
spring = { path = "../spring", version = "0.4" }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }
sea-orm = { workspace = true, optional = true }
