[package]
name = "spring-sqlx"
description = "rust microservice framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
spring-boot = { path = "../spring-boot", version = "0.0.8" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
schemars = { workspace = true }
sqlx = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rust_decimal = { version = "1", default-features = false, optional = true }
bigdecimal = { version = "0.3", default-features = false, optional = true }
chrono = { version = "0.4.30", default-features = false, optional = true }
time = { version = "0.3.36", default-features = false, optional = true }
uuid = { version = "1", default-features = false, optional = true }

[features]
default = ["runtime-tokio-native-tls", "sqlx/default"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
with-json = [
    "serde_json",
    "sqlx?/json",
    "chrono?/serde",
    "time?/serde",
    "uuid?/serde",
]
with-chrono = ["chrono", "sqlx?/chrono"]
with-rust_decimal = ["rust_decimal", "sqlx?/rust_decimal"]
with-bigdecimal = ["bigdecimal", "sqlx?/bigdecimal"]
with-uuid = ["uuid", "sqlx?/uuid"]
with-time = ["time", "sqlx?/time"]
runtime-tokio = ["sqlx?/runtime-tokio"]
runtime-tokio-native-tls = ["sqlx?/runtime-tokio-native-tls", "runtime-tokio"]
runtime-tokio-rustls = ["sqlx?/runtime-tokio-rustls", "runtime-tokio"]
